src/objects/APTS_Stage_MSPA_LineItems__c.object
<CustomObject>
    <fields>
        <fullName>APTS_CreatedBy__c</fullName>
        <label>CreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CreatedOn__c</fullName>
        <label>CreatedOn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <label>Discount %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSPA Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Stage MSPA Line Items</relationshipLabel>
        <relationshipName>Stage_MSPA_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_1_Gross_Price__c</fullName>
        <label>Price 1 (Gross Price)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Unit__c</fullName>
        <label>Price Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Level_3__c</fullName>
        <label>Product Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>RowStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Identifier__c</fullName>
        <label>SPA Identifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Line_Item__c</fullName>
        <label>SPA Line Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stage MSPA LineItems</label>
    <nameField>
        <displayFormat>MLI{00000000}</displayFormat>
        <label>Stage MSPA Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage MSPA Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>